<resources>
    <string name="app_name">Courses</string>

    <string name="title_home">Home</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_profile">Profile</string>
    <string name="title_login">Login</string>
    <string name="title_course_details">Course Details</string>

    <string name="example_gmail_com">example@gmail.com</string>
    <string name="email">Email</string>
    <string name="login">Вход</string>
    <string name="example_password">Введите пароль</string>
    <string name="password">Пароль</string>
    <string name="no_account">Нет аккаунта?</string>
    <string name="registration">Регистрация</string>
    <string name="password_recovery">Забыл пароль</string>
    <string name="invalid_email">Введите корректный email</string>
    <string name="invalid_password">Пароль должен содержать не менее 8 символов</string>
    <string name="course_image">course image</string>
    <string name="more">Подробнее</string>
    <string name="home">Главная</string>
    <string name="favorites">Избранное</string>
    <string name="profile">Профиль</string>
    <string name="search_courses">Search courses...</string>
    <string name="by_adding_date">По дате добавления</string>
    <string name="empty_favorites">У вас нет избранных курсов</string>
</resources>